backported Java 16 features