@@ -5,6 +5,8 @@ import net.minecraft.text.LiteralText;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -22,7 +24,7 @@ public class FlowingText {
                 return compiled;
             }).collect(Collectors.toList());
         } else {
-            return List.of(text);
+            return Collections.singletonList(text);
         }
     }
 }
